--- a/DAN_XLIX_Milan_Mitic/WpfHotel/WpfHotel.csproj
+++ b/DAN_XLIX_Milan_Mitic/WpfHotel/WpfHotel.csproj
@@ -115,6 +115,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Resource Include="Resources\password.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
