--- a/DAN_XLIX_Milan_Mitic/WpfHotel/WpfHotel.csproj
+++ b/DAN_XLIX_Milan_Mitic/WpfHotel/WpfHotel.csproj
@@ -35,8 +35,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,6 +64,39 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\HotelDataBaseModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HotelDataBaseModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\HotelDataBaseModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HotelDataBaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\HotelDataBaseModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HotelDataBaseModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\tblAccount.cs">
+      <DependentUpon>HotelDataBaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\tblApplication.cs">
+      <DependentUpon>HotelDataBaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\tblApplicationStatu.cs">
+      <DependentUpon>HotelDataBaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\tblEmployee.cs">
+      <DependentUpon>HotelDataBaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\tblEngagement.cs">
+      <DependentUpon>HotelDataBaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\tblManager.cs">
+      <DependentUpon>HotelDataBaseModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Service.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
@@ -111,6 +153,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="Model\HotelDataBaseModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>HotelDataBaseModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model\HotelDataBaseModel.edmx.diagram">
+      <DependentUpon>HotelDataBaseModel.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -120,11 +170,24 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="OwnerAccess.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Model\HotelDataBaseModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>HotelDataBaseModel.Context.cs</LastGenOutput>
+      <DependentUpon>HotelDataBaseModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="Model\HotelDataBaseModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>HotelDataBaseModel.edmx</DependentUpon>
+      <LastGenOutput>HotelDataBaseModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
