--- a/DAN_XLIX_Milan_Mitic/WpfHotel/WpfHotel.csproj
+++ b/DAN_XLIX_Milan_Mitic/WpfHotel/WpfHotel.csproj
@@ -99,6 +99,8 @@
     </Compile>
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Service.cs" />
+    <Compile Include="ViewModels\AddEmployeeViewModel.cs" />
+    <Compile Include="ViewModels\AddManagerViewModel.cs" />
     <Compile Include="ViewModels\EmployeeViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\ManagerViewModel.cs" />
